# Audiergon

./: .gitignore  .readthedocs.yaml  LICENSE  README.md
audiergon/: README.md  bit_reverse.py  fast_fourier_transform.py  fourier_analysis.py  live_fourier_analysis.py  local_gradio.py  process.py  pyproject.toml  requirements.txt
audiergon/apps/: app.py  fourier_analysis.py  live_fourier_analysis.py
audiergon/audiergon/: __init__.py  bit_reverse.py  fast_fourier_transform.py  process.py
audiergon/docs/: bit_reverse.rst  conf.py  fft.rst  index.rst  process.rst
cloud/: README.md
cloud/aws/: ARCHITECTURE.md  app.py  minimising-lambda-costs.md
cloud/aws/cdk/: __init__.py  cdk_stack.py
cloud/frontend/: README.md
cloud/frontend/audiergon-cloudfrontend/: package.json
cloud/frontend/audiergon-cloudfrontend/app/: layout.tsx  page.tsx
cloud/lambda/: handler.py  requirements.txt
